fixed direction and alignment of search settings

--- a/src/Components/ControlPanel/SearchControl/SearchControl.css
+++ b/src/Components/ControlPanel/SearchControl/SearchControl.css
@@ -1,4 +1,7 @@
-.selectStartNodeBox {
-    min-width: 500px;
-    padding: 5px
+.searchSettings {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-bottom: 15px;
 }
